--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "AIR_BEERS_AND_BIKES",
   "private": true,
   "dependencies": {
+    "@mapbox/mapbox-gl-geocoder": "^4.5.1",
     "@rails/webpacker": "4.2.2",
     "bootstrap": "^4.4.1",
     "flatpickr": "^4.6.3",
     "jquery": "^3.4.1",
     "mapbox-gl": "^1.8.1",
+    "places.js": "^1.18.1",
     "popper.js": "^1.16.1",
     "siema": "^1.5.1"
   },
